# PyFlexiProxy

./: .gitignore  README.md  pyproject.toml
src/: config.example.yaml  connections.py  main.py  master_process.py  worker_process.py
src/schemaData/: validateSchema.py
src/schemaData/schemaStructures/: __init__.py  configSchema.py
src/schemas/: config_schema.py
